--- a/JD/index.css
+++ b/JD/index.css
@@ -51,7 +51,7 @@ span {
 
 .nav-icon {
     /*display: inline-block;*/
-    width: 257.563px;
+    width: 257px;
     height: 30px;
     padding-right: 10px;
     float: left;
@@ -63,7 +63,7 @@ span {
 
 .nav-icon>span {
     display: inline-block;
-    width: 40px;
+    width: 50px;
     height: 30px;
     padding-right: 10px;
     padding-left: 2px;
@@ -84,6 +84,7 @@ span {
     float: left;
     height: 30px;
     line-height: 30px;
+    padding-right: 10px;
 }
 
 .nav-ul a {
@@ -111,7 +112,7 @@ span {
     width: 300px;
     padding: 10px;
     background-color: #fff;
-    margin-left: 203px;
+    margin-left: 193px;
     border: 1px solid #999;
     border-top: none;
     display: none;
@@ -132,5 +133,271 @@ span {
     color: #fff;
 }
 
+.nav-ul-select {
+    width: 280px;
+    top: 8px;
+    position: absolute;
+    z-index: 2;
+    margin-left: 5.5px;
+    display: none;
+}
 
+.white {
+    width: 66px;
+    height: 30px;
+    background-color: #fff;
+    border: 1px solid #999;
+    border-bottom: none;
+}
+
+.nav-ul-dropdown {
+    border: 1px solid #999;
+    border-top: none;
+    background-color: #fff;
+}
+
+.nav-ul-dropdown div {
+    width: 126px;
+    float: left;
+}
+
+.myjd {
+    margin-top: -2px;
+}
+
+.kehu {
+    margin-top: -2px;
+    position: relative;
+}
+
+.item {
+    position: absolute;
+    top: 0px;
+    /*left: 6px;*/
+    z-index: 2;
+    display: none;
+}
+
+.item-dropdown {
+    width: 150px;
+    background: #fff;
+    position: absolute;
+    left: -84px;
+    z-index: 2;
+    border: 1px solid #999;
+    border-top: none;
+}
+
+.item-dropdown ul {
+    width: 200px;
+}
+
+.item li {
+    width: 70px;
+    color: #999;
+}
+
+.item span {
+    display: inline-block;
+    text-align: left;
+    width: 150px;
+    padding-left: 10px;
+}
+
+.white.kehu {
+    border-top: none;
+}
+
+.ct-s {
+    height: 140px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    /*background-image: url(./img/照相机.png);*/
+}
+
+.aside {
+    margin-right: 230px;
+    margin-top: -24px;
+}
+
+.aside img {
+    display: inline-block;
+    width: 190px;
+    height: 170px;
+    /*float: left;*/
+    /*position: absolute;*/
+    /*z-index: 2;*/
+    /*top: -30px;*/
+    /*left: 40px;*/
+    box-shadow: 2px 2px 12px 2px rgba(1, 1, 1, .3);
+}
+
+.search {
+    width: 500px;
+    height: 35px;
+    border: 1px solid #f10214;
+    flex: none;
+    margin-left: -50px;
+}
+
+.searchi {
+    width: 498px;
+    border: none;
+    height: 34px;
+    font-size: 16px;
+    outline: none;
+    /*border-bottom: 1px solid red;*/
+}
+
+.searcha {
+    width: 4px;
+    height: 10px;
+    position: relative;
+    background-size: cover;
+    background-image: url(./img/照相机.png);
+    border-radius: 4px;
+    padding: 4px 12px;
+    /*overflow: hidden;*/
+    /*color: #1E88C7;*/
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 20px;
+    cursor: pointer;
+    left: -45px;
+}
+
+.searchicon {
+    position: absolute;
+    font-size: 10px;
+    right: 0;
+    top: 0;
+    opacity: 0
+}
+
+.searchc {
+    width: 48px;
+    height: 37px;
+    /*order: 1;*/
+    position: relative;
+    left: -30px;
+    background: #f10214;
+    cursor: pointer;
+}
+
+.search img {
+    display: inline-block;
+    margin-top: 1px;
+    background: #111;
+}
+
+.buycar {
+    width: 190px;
+    height: 35px;
+    background: #fff;
+    border: 1px solid #ccc;
+    line-height: 35px;
+    color: #f10214;
+    position: relative;
+}
+
+.buycar-dropdown {
+    width: 308px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 12px;
+    color: #ccc;
+    /*text-align: left;*/
+    background: #fff;
+    margin-left: -119px;
+    border: 1px solid #ccc;
+    border-top: none;
+    margin-top: 2px;
+    box-shadow: 1px 1px 2px 2px rgba(1, 1, 1, .3);
+    display: none;
+}
+
+.buycar-dropdown div {
+    display: inline-block;
+    vertical-align: middle;
+    width: 56px;
+    height: 49px;
+    background: url(https://img11.360buyimg.com/uba/jfs/t3571/299/131233948/1117/a1196554/58004d6dN2927f0f7.png);
+}
+
+#icon-o {
+    position: absolute;
+    top: 2px;
+}
+
+.ad {
+    border: 1px solid #999;
+    padding: 5px;
+    border-top: none;
+    margin-top: -70px;
+}
+
+.ad-san:before {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 13px solid transparent;
+    border-right: 13px solid transparent;
+    border-bottom: 13px solid #999;
+}
+
+.ad-san {
+    width: 60px;
+    height: 60px;
+    background: #f6f6f6 url(http://img30.360buyimg.com/da/jfs/t5158/281/1659581273/18817/fe360aff/5912d52dNd0e40612.png) 50% no-repeat;
+}
+
+.hotkeys {
+    width: 550px;
+    height: 20px;
+    line-height: 20px;
+    margin: 0 auto;
+    margin-top: -50px;
+    padding-left: 40px;
+    /*transition: all .2s;*/
+}
+
+.hotkeys a {
+    display: inline-block;
+    padding: 0 8px;
+    color: #666;
+}
+
+.title {
+    width: 790px;
+    margin: 0 auto;
+}
+
+.title a {
+    display: inline-block;
+    font-weight: 700;
+    color: #111;
+    font-size: 16px;
+    padding: 18px;
+    height: 40px;
+    line-height: 40px;
+    margin-top: -15px;
+}
+
+.treasure {    
+    height: 40px;
+    width: 190px;
+    float:right;
+    top: -60px;
+    position: relative;
+    
+}
+.treasure a {
+     display: block;
+     width: 190px;
+     height: 40px;
+     background: url(https://img14.360buyimg.com/da/jfs/t5815/81/1043590164/26032/de0e76d0/59233acaN45bc281c.gif) center no-repeat;
+}
 /*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImluZGV4LmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFLGlCQUFpQjtDQUNsQiIsImZpbGUiOiJpbmRleC5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIubGkge1xuICBsaXN0LXN0eWxlOiBub25lO1xufVxuIl19 */
