--- a/JD/middle.less
+++ b/JD/middle.less
@@ -150,7 +150,8 @@
     left: 80px;
     top: 80%;
     transform: translateY(-100%);
-    z-index: 444; // display: none;
+    z-index: 444; 
+    display: none;
     ul {
         a {
             color: #fff;
